<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
            android:id="@+id/open"
            android:text="@string/open"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/share"
            android:text="@string/share"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/rename"
            android:text="@string/rename"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/copy"
            android:text="@string/copy"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/move"
            android:text="@string/move"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
            android:id="@+id/delete"
            android:text="@string/delete"
            style="@android:style/Widget.Holo.Button.Borderless"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
